conformance/tests/gateway-infrastructure.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-with-infrastructure-metadata
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  infrastructure:
    annotations:
      key1: value1
    labels:
      key2: value2
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
